# Automonous-Robot

./: CMakeLists.txt
.cache/clangd/index/: BNO08x.cpp.A589D3E126B459AC.idx  BNO08x.hpp.211B36F52E2D1E19.idx  BNO08xCbGeneric.hpp.35F1E1E4E331B54F.idx  BNO08xCbParamRptID.hpp.03A2E31ED81763B9.idx  BNO08xCbParamVoid.hpp.054704C1C4D35414.idx  BNO08xGlobalTypes.hpp.3996281E87E2D867.idx  BNO08xPrivateTypes.hpp.0C4005976C3AE818.idx  BNO08xReports.hpp.EA6C4ECCF9B00B93.idx  BNO08xRpt.cpp.803C8DCD51D849B1.idx  BNO08xRpt.hpp.31F79EABBD3D19FB.idx  BNO08xRptARVRStabilizedGameRV.cpp.E87D29118B944193.idx  BNO08xRptARVRStabilizedGameRV.hpp.299D071DE95C9C5C.idx  BNO08xRptARVRStabilizedRV.cpp.A385EA2C05DAA389.idx  BNO08xRptARVRStabilizedRV.hpp.DBF043BA8D4F47BB.idx  BNO08xRptAcceleration.cpp.7BD4738F8385A785.idx  BNO08xRptAcceleration.hpp.E145F5B144C9A9B1.idx  BNO08xRptActivityClassifier.cpp.C406F697A5F9A425.idx  BNO08xRptActivityClassifier.hpp.A21DA5DC519B6985.idx  BNO08xRptCalGyro.cpp.B1C549ED97A88258.idx  BNO08xRptCalGyro.hpp.23713CE71821FB29.idx  BNO08xRptCalMagnetometer.cpp.D469733EEDA63137.idx  BNO08xRptCalMagnetometer.hpp.DA9728F40D60EA57.idx  BNO08xRptGameRV.cpp.BA9EBA6F9CA06A3C.idx  BNO08xRptGameRV.hpp.250503F37C29F637.idx  BNO08xRptGravity.cpp.BF00117CE61C658D.idx  BNO08xRptGravity.hpp.549AD1DC50EC9A43.idx  BNO08xRptIGyroRV.cpp.CBDAF2C0FEDB53D9.idx  BNO08xRptIGyroRV.hpp.31C79520E043FAA7.idx  BNO08xRptLinearAcceleration.cpp.36D5983853C9CB4E.idx  BNO08xRptLinearAcceleration.hpp.F9156B94E4938E2E.idx  BNO08xRptRV.cpp.2E01575CDE4B5A0F.idx  BNO08xRptRV.hpp.8AACA255415D8A5C.idx  BNO08xRptRVGeneric.cpp.71E98D4CB9285F49.idx  BNO08xRptRVGeneric.hpp.CAB8C58CEB2AC7AA.idx  BNO08xRptRVGeomag.cpp.2C1A96E33E132B1F.idx  BNO08xRptRVGeomag.hpp.68BC8B8D928202AB.idx  BNO08xRptRawMEMSAccelerometer.cpp.618D57FEC44F6F3B.idx  BNO08xRptRawMEMSAccelerometer.hpp.5E6D7E5D84758CFB.idx  BNO08xRptRawMEMSGyro.cpp.1D81F4EE36BF0A81.idx  BNO08xRptRawMEMSGyro.hpp.F1C2712BE2A25B99.idx  (+137 more)
component/: CMakeLists.txt
component/include/: TB6612FNG.h  VL53L1X_api.h  VL53L1X_calibration.h  esp32_bno08x.h  i2c.h  joystick.h  pcf8575.h  serial_ros.h  spi.h  vl53l1_platform.h  vl53l1_types.h  vl53l1x.h
component/src/: BNO08x.cpp  TB6612FNG.c  VL53L1X_api.c  VL53L1X_calibration.c  esp32_bno08x.c  i2c.c  joystick.c  pcf8575.c  serial_ros.c  spi.c  vl53l1_platform.c  vl53l1x.c
main/: CMakeLists.txt  main.c  main.cpp
